<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GridView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/truewhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workers"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textAllCaps="true"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="190dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/blach_border2"
            android:layout_margin="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mechanic"
                android:textColor="@color/truewhite"
                android:textSize="30sp"
                android:padding="25dp"
                />
            <Button
                android:id="@+id/expandmechanic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expand"
                android:background="@null"
                android:padding="20dp"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/mechanic"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-0dp"
            />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="10dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/blach_border2"
            >
            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/electricianicon"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electricians"
                android:textColor="@color/truewhite"
                android:textSize="30sp"
                android:layout_alignParentRight="true"
                android:padding="25dp"
                />
            <Button
                android:id="@+id/expandelec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expand"
                android:background="@null"
                android:layout_alignParentRight="true"
                android:padding="20dp"
                android:layout_alignParentBottom="true"
                />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="190dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/blach_border2"
            android:layout_margin="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plumber"
                android:textColor="@color/truewhite"
                android:textSize="30sp"
                android:padding="25dp"
                />
            <Button
                android:id="@+id/expandplumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expand"
                android:background="@null"
                android:padding="20dp"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/plumber"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-0dp"
            />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="10dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/blach_border2"
            >
            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/carpenter"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carpenter"
                android:textColor="@color/truewhite"
                android:textSize="30sp"
                android:layout_alignParentRight="true"
                android:padding="25dp"
                />
            <Button
                android:id="@+id/expandcarpenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expand"
                android:background="@null"
                android:layout_alignParentRight="true"
                android:padding="20dp"
                android:layout_alignParentBottom="true"
                />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="190dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/blach_border2"
            android:layout_margin="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welder"
                android:textColor="@color/truewhite"
                android:textSize="30sp"
                android:padding="25dp"
                />
            <Button
                android:id="@+id/expandwelder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expand"
                android:background="@null"
                android:padding="20dp"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/welder"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-0dp"
            />

    </RelativeLayout>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergency"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textAllCaps="true"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="10dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/blach_border2"
            >
            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/police"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/police"
                android:textColor="@color/truewhite"
                android:textSize="30sp"
                android:layout_alignParentRight="true"
                android:padding="25dp"
                />
            <Button
                android:id="@+id/expandpolice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expand"
                android:background="@null"
                android:layout_alignParentRight="true"
                android:padding="20dp"
                android:layout_alignParentBottom="true"
                />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="190dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/blach_border2"
            android:layout_margin="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Doctors"
                android:textColor="@color/truewhite"
                android:textSize="30sp"
                android:padding="25dp"
                />
            <Button
                android:id="@+id/expandfirstaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expand"
                android:background="@null"
                android:padding="20dp"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/firstaid"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-0dp"
            />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="10dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/blach_border2"
            >
            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/ambulance"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospitals"
                android:textColor="@color/truewhite"
                android:textSize="30sp"
                android:layout_alignParentRight="true"
                android:padding="25dp"
                />
            <Button
                android:id="@+id/expandambulance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expand"
                android:background="@null"
                android:layout_alignParentRight="true"
                android:padding="20dp"
                android:layout_alignParentBottom="true"
                />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>
